<resources>
    <string name="app_name">Midas</string>
    <string name="app_version">V 1.0.2</string>
    <string name="developer">Bhyte</string>
    <string name="slogan">Explore your limits</string>
    <string name="bhyte_text_logo">Bhyte text logo</string>
    <string name="slider_image">Slider Image</string>
    <string name="sign_up_complete_image">Sign up complete image</string>
    <string name="verify_identity_image">Verify identity image</string>
    <string name="onboarding_title_one">Create Virtual Credit Cards</string>
    <string name="onboarding_title_two">Buy &amp; Sell Gift Cards</string>
    <string name="onboarding_title_three">Manage Cards</string>
    <string name="onboarding_title_four">Top Up Easily</string>
    <string name="onboarding_title_five">Accepted on 100+ Platforms</string>
    <string name="onboarding_description_one">Midas allows you to create virtual cards that can be used online to make purchases and complete payments</string>
    <string name="onboarding_description_two">Trade gift cards from most stores around the world</string>
    <string name="onboarding_description_three">Set limits and cancel subscriptions made with your virtual cards</string>
    <string name="onboarding_description_four">Add money to your card easily using various methods like mobile money transfer</string>
    <string name="onboarding_description_five">Cards created with Midas can be used on over 100 platforms and websites</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started_title">Lets Get Started!</string>
    <string name="growing_community">Join The Growing Community</string>
    <string name="get_started_description">Join Midas now and enjoy all the perks that come with it</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_code">Get Code</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="enter_number">Enter your mobile number to receive a verification code</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="go">Continue</string>
    <string name="fingerprint_description">Continue to fingerprint registration screen</string>
    <string name="skip_step">Skip This Step</string>
    <string name="try_fingerprint">Try Fingerprint</string>
    <string name="try_fingerprint_description">Touch fingerprint sensor to sign into your account</string>
    <string name="just_use_pass">or just use password instead</string>
    <string name="having_problems">Having problems? Click Here</string>
    <string name="welcome">Welcome!!!</string>
    <string name="hooray">Hooray!</string>
    <string name="welcome_description">Well you have thus come this far! Thanks for choosing us enjoy your experience!</string>
    <string name="identity">Identity</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="national">National</string>
    <string name="passport">Passport</string>
    <string name="recommended">Recommended</string>
    <string name="done">Done</string>
    <string name="passport_description">Required passport for non citizens of Ghana or if you do not have a national ID</string>
    <string name="identity_description">We need to verify your identity (Required)</string>
    <string name="verification">Verification</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="verification_description">Enter a 4 digit number that \nwas sent to </string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="invite_friends">Invite friends</string>
    <string name="rate_midas">Rate Midas</string>
    <string name="rate">Rate</string>
    <string name="rate_midas_description">Are you sure you want to rate the app? You would be redirected to the Play Store</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_default_name">John Doe</string>
    <string name="profile_default_email">johndoe@gmail.com</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Logout</string>
    <string name="take_picture">Take a picture</string>
    <string name="choose_picture">Choose picture from gallery</string>
    <string name="remove_picture">Remove picture</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_title">Sign out from\nMidas</string>
    <string name="logout_confirmation">Are you sure you would like to sign out of your account?</string>
    <string name="deposit_confirmation_detail">Are you sure you would like to deposit GHC20 into your account</string>
    <string name="home">Home</string>
    <string name="transaction">Transactions</string>
    <string name="cards">Cards</string>
    <string name="settings">Settings</string>
    <string name="signed_in">Signed in as</string>
    <string name="sign_out">Sign out</string>
    <string name="placeholder_name">john doe</string>
    <string name="personalize">Personalize</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="advanced">Advanced</string>
    <string name="download_statement">Download my account statement</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="contact_support">Contact Support</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="no_cards">You currently have no cards!</string>
    <string name="no_cards_description">Create a new card to start exploring your boundaries with Midas</string>
    <string name="create_new_card">Create New Card</string>
    <string name="virtual_card">Midas Virtual Debit\nCard</string>
    <string name="virtual_card2">Midas Virtual Debit Card</string>
    <string name="gift_card">Midas Gift Debit\nCard</string>
    <string name="gift_card2">Midas Gift Debit Card</string>
    <string name="create_virtual_card">Create Virtual Card</string>
    <string name="no_transactions">You have no transactions!</string>
    <string name="no_transactions_description">You have not made any transactions yet when you do they will appear here</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure about this?</string>
    <string name="choose_card_design">Choose card design</string>
    <string name="conditions_of_use">
        By using this app, you certify that you have read and reviewed this Agreement and that you agree to comply with its terms. 
        If you do not want to be bound by the terms of this Agreement, you are advised to leave the app accordingly.Midas only grants 
        use and access of this app, its products, and its services to those who have accepted its terms.
    </string>
    <string name="privacy_policy">
        Before you continue using our website, we advise you to read our privacy policy [link to privacy policy] regarding our user data collection.
        It will help you better understand our practices.
    </string>
    <string name="age_restriction">
        You must be at least 18 (eighteen) years of age before you can use this website. By using this website,
        you warrant that you are at least 18 years of age and you may legally adhere to this Agreement.
        Midas assumes no responsibility for liabilities related to age misrepresentation.
    </string>
    <string name="intellectual_property">
        You agree that all materials, products, and services provided on this app are the property of
        Midas, its affiliates, directors, officers, employees, agents, suppliers, or licensors including all
        copyrights, trade secrets, trademarks, patents, and other intellectual property. You also agree
        that you will not reproduce or redistribute the [name]’s intellectual property in any way,
        including electronic, digital, or new trademark registrations.
        You grant Midas a royalty-free and non-exclusive license to display, use, copy, transmit, and
        broadcast the content you upload and publish. For issues regarding intellectual property claims,
        you should contact the company in order to come to an agreement.
    </string>
    <string name="user_accounts">
        As a user of this app, you may be asked to register with us and provide private information.
        You are responsible for ensuring the accuracy of this information, and you are responsible for
        maintaining the safety and security of your identifying information. You are also responsible for
        all activities that occur under your account or password.
        If you think there are any possible issues regarding the security of your account on the app,
        inform us immediately so we may address them accordingly.
        We reserve all rights to terminate accounts, edit or remove content and cancel orders at our sole
        discretion.
    </string>
    <string name="applicable_law">
        By using this app, you agree that the laws of Ghana, without regard to principles of
        conflict laws, will govern these terms and conditions, or any dispute of any sort that might come
        between Midas and you, or its business partners and associates.
    </string>
    <string name="disputes">
        Any dispute related in any way to your visit to this website or to products you purchase from us
        shall be arbitrated by state or federal court [location] and you consent to exclusive jurisdiction
        and venue of such courts
    </string>
    <string name="indemnification">
        You agree to indemnify Midas and its affiliates and hold Midas harmless against legal claims
        and demands that may arise from your use or misuse of our services. We reserve the right to
        select our own legal counsel.
    </string>
    <string name="limitation_on_liability">
        Midas is not liable for any damages that may occur to you as a result of your misuse of our app.
        Midas reserves the right to edit, modify, and change this Agreement at any time. We shall let
        our users know of these changes through electronic mail. This Agreement is an understanding
        between Midas and the user, and this supersedes and replaces all prior agreements regarding
        the use of this app.
    </string>
    <string name="terms_and_conditions_text_view">Terms and Conditions</string>
    <string name="last_updated_january_21_2022">Last Updated January 21 2022</string>
    <string name="read_these_terms_and_conditions_carefully_before_using_midas_operated_by_bhyte_llc">Read these terms and conditions carefully before using Midas operated by Bhyte LLC.</string>
    <string name="conditions_of_use_tv_terms_and_conditions">Conditions of use</string>
    <string name="privacy_policy_tv_terms_and_conditions">Privacy Policy</string>
    <string name="age_restriction_tv_terms_and_conditions">Age restriction</string>
    <string name="intellectual_property_tv_terms_and_conditions">Intellectual property</string>
    <string name="user_accounts_tv_terms_and_conditions">User accounts</string>
    <string name="applicable_law_tv_terms_and_conditions">Applicable law</string>
    <string name="disputes_tv_terms_and_conditions">Disputes</string>
    <string name="indemnification_tv_terms_and_conditions">Indemnification</string>
    <string name="limitation_on_liability_tv_terms_and_conditions">Limitation on Liability</string>
    <string name="decline_tv_material_btn">Decline</string>
    <string name="accept_tv_material_btn">Accept</string>
</resources>