<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home_image"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/nav_one" />
    <item
        android:id="@+id/bottom_nav_transactions"
        android:icon="@drawable/transaction_image"
        android:title="@string/transaction"
        app:cnb_backgroundColor="@color/nav_two" />
    <item
        android:id="@+id/bottom_nav_cards"
        android:icon="@drawable/card_image"
        android:title="@string/cards"
        app:cnb_backgroundColor="@color/nav_three" />
    <item
        android:id="@+id/bottom_nav_settings"
        android:icon="@drawable/settings_image"
        android:title="@string/settings"
        app:cnb_backgroundColor="@color/nav_four" />

</menu>