<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/bg"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Common.TermsOfService">

    <LinearLayout
        android:elevation="@dimen/dimen_5"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_15">

            <RelativeLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/main_text"
                    android:textSize="26sp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/last_updated_january_21_2022"
                android:textColor="@color/blue_200" />

            <TextView
                android:textColor="@color/secondary_text"
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:text="@string/read_these_terms_and_conditions_carefully_before_using_midas_operated_by_bhyte_llc" />

        </RelativeLayout>

        <View
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_200" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_15"
            android:paddingEnd="@dimen/dimen_15">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/conditions_of_use_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />


            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions_of_use" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/privacy_policy_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/age_restriction_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_restriction" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/intellectual_property_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intellectual_property" />

            <TextView
                android:id="@+id/title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/user_accounts_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_accounts" />

            <TextView
                android:id="@+id/title7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/applicable_law_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applicable_law" />

            <TextView
                android:id="@+id/title8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/disputes_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disputes" />

            <TextView
                android:id="@+id/title9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/indemnification_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indemnification" />

            <TextView
                android:id="@+id/title10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/limitation_on_liability_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:layout_marginBottom="@dimen/dimen_50"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:id="@+id/desc9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limitation_on_liability" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>