<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Common.AcceptTermsOfService">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/dimen_5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_15">

            <RelativeLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/darker_grotesque_black"
                    android:text="@string/terms_and_conditions_text_view"
                    android:textColor="@color/main_text"
                    android:textSize="26sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:fontFamily="@font/darker_grotesque_medium"
                android:text="@string/last_updated_january_21_2022"
                android:textColor="@color/blue_200" />

            <TextView
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:fontFamily="@font/darker_grotesque_medium"
                android:text="@string/read_these_terms_and_conditions_carefully_before_using_midas_operated_by_bhyte_llc"
                android:textColor="@color/secondary_text" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/blue_200" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_15"
            android:paddingEnd="@dimen/dimen_15">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/conditions_of_use_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/conditions_of_use"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/privacy_policy_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/privacy_policy"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/age_restriction_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/age_restriction"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/intellectual_property_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/intellectual_property"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/user_accounts_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/user_accounts"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/applicable_law_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/applicable_law"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/disputes_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/disputes"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/indemnification_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/indemnification"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/title10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/darker_grotesque_black"
                android:text="@string/limitation_on_liability_tv_terms_and_conditions"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/darker_grotesque"
                android:text="@string/limitation_on_liability"
                android:textColor="@color/secondary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginBottom="@dimen/dimen_30"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/decline_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="@dimen/dimen_10"
                    android:layout_weight="1"
                    android:backgroundTint="@color/bg"
                    android:fontFamily="@font/darker_grotesque"
                    android:onClick="callPopup"
                    android:text="@string/decline_tv_material_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_200"
                    app:cornerRadius="35dp"
                    app:strokeColor="@color/blue_200"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accept_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:layout_weight="1"
                    android:fontFamily="@font/darker_grotesque"
                    android:onClick="callSignIn"
                    android:text="@string/accept_tv_material_btn"
                    android:textAllCaps="false"
                    app:cornerRadius="35dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>